Revise README for project overview and details
Updated project description and structure in README.